@@ -1,6 +1,6 @@
 Package: car
 Version: 2.0-12
-Date: 2011/12/28
+Date: 2011/12/31
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@stat.umn.edu"),
